--- a/App-RK-BM/View/Base.lproj/Main.storyboard
+++ b/App-RK-BM/View/Base.lproj/Main.storyboard
@@ -97,7 +97,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LYv-9y-gSa">
-                                <rect key="frame" x="0.0" y="50" width="108" height="35"/>
+                                <rect key="frame" x="0.0" y="50" width="108" height="34.333333333333343"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="chevron.backward" catalog="system" title="Regresar"/>
                                 <connections>
@@ -105,24 +105,55 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="njn-g4-WJg">
-                                <rect key="frame" x="129" y="409" width="135" height="35"/>
+                                <rect key="frame" x="129" y="717.66666666666663" width="135" height="34.333333333333371"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Cambiar datos"/>
                                 <connections>
                                     <action selector="updateUser:" destination="KX0-qu-BAE" eventType="touchUpInside" id="0Lm-Yb-R4D"/>
                                 </connections>
                             </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ZIx-bi-iDt">
+                                <rect key="frame" x="60" y="184.33333333333334" width="273" height="119.00000000000003"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Formularios" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jKJ-km-kxt">
+                                        <rect key="frame" x="0.0" y="0.0" width="273" height="34.333333333333336"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yYS-JV-Sup">
+                                        <rect key="frame" x="0.0" y="42.333333333333314" width="273" height="34.333333333333343"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="brain" catalog="system" title="MMSE"/>
+                                        <connections>
+                                            <action selector="mmseButtonTapped:" destination="KX0-qu-BAE" eventType="touchUpInside" id="rj4-HB-qfl"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QXy-ge-uVp">
+                                        <rect key="frame" x="0.0" y="84.666666666666657" width="273" height="34.333333333333343"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="accessibility" catalog="system" title="IPAQ"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="tYd-q1-D8n"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="njn-g4-WJg" firstAttribute="top" secondItem="tYd-q1-D8n" secondAttribute="top" constant="409" id="JG4-ZT-Lj0"/>
                             <constraint firstItem="LYv-9y-gSa" firstAttribute="leading" secondItem="tYd-q1-D8n" secondAttribute="leading" id="Jd6-f3-rtG"/>
                             <constraint firstItem="LYv-9y-gSa" firstAttribute="top" secondItem="tYd-q1-D8n" secondAttribute="top" constant="50" id="OTp-fc-rPg"/>
+                            <constraint firstItem="tYd-q1-D8n" firstAttribute="bottom" secondItem="njn-g4-WJg" secondAttribute="bottom" constant="100" id="QoN-Nl-www"/>
                             <constraint firstItem="tYd-q1-D8n" firstAttribute="trailing" secondItem="njn-g4-WJg" secondAttribute="trailing" constant="129" id="RJm-me-4kh"/>
+                            <constraint firstItem="ZIx-bi-iDt" firstAttribute="top" secondItem="LYv-9y-gSa" secondAttribute="bottom" constant="100" id="bZZ-6W-deW"/>
+                            <constraint firstItem="tYd-q1-D8n" firstAttribute="trailing" secondItem="ZIx-bi-iDt" secondAttribute="trailing" constant="60" id="ekE-x9-AoX"/>
+                            <constraint firstItem="ZIx-bi-iDt" firstAttribute="leading" secondItem="tYd-q1-D8n" secondAttribute="leading" constant="60" id="w3l-ON-Q1j"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="5Ip-ZS-SOy"/>
+                    <connections>
+                        <outlet property="ipaqButton" destination="QXy-ge-uVp" id="7jx-g3-K13"/>
+                        <outlet property="mmseButton" destination="yYS-JV-Sup" id="yI2-ue-2LB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GuF-2W-M9c" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="6a0-q8-4dY" userLabel="Exit" sceneMemberID="exit"/>
@@ -256,6 +287,8 @@
         <segue reference="yTp-kn-hsu"/>
     </inferredMetricsTieBreakers>
     <resources>
+        <image name="accessibility" catalog="system" width="128" height="123"/>
+        <image name="brain" catalog="system" width="128" height="107"/>
         <image name="chevron.backward" catalog="system" width="97" height="128"/>
         <image name="document.circle.fill" catalog="system" width="128" height="123"/>
         <image name="googleIcon" width="24" height="24"/>
