--- a/App-RK-BM/View/Base.lproj/Main.storyboard
+++ b/App-RK-BM/View/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--Initial View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController title="Initial View Controller" id="BYZ-38-t0r" customClass="IntroViewController" customModule="App_RK_BM" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="IntroViewController" title="Initial View Controller" id="BYZ-38-t0r" customClass="IntroViewController" customModule="App_RK_BM" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
